Tried to fix cropped text description on large screens

--- a/public/css/slideshow.css
+++ b/public/css/slideshow.css
@@ -20,6 +20,8 @@
 
     align-items: center; /* Note : flex display is set in Slideshow Javascript */
     justify-content: center;
+
+    height: 400px;
 }
 
 .image-slide-wrapper {
@@ -27,16 +29,10 @@
     position: relative;  /* necessary for Zoom Lens js */
 }
 
-.mySlides, .image-slide-wrapper {
-
-    height: 400px;
-}
-
-
 .image-slide-wrapper > img {
     
-    max-height: 100%;
     max-width: 100%;
+    max-height: 400px;
     display: block;
     margin: auto;
     border-radius: 6px;
@@ -152,7 +148,7 @@
 }
 
 
-.caption-container.no-caption{
+.in-consultation-mode .caption-container.no-caption{
 
     display: none;
 
@@ -161,7 +157,7 @@
 
 .thumbnails-container{
 
-    background-color:inherit;
+    background-color: inherit;
 
 }
 
